After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 757885 - Go to line popover takes too long to appear
Go to line popover takes too long to appear
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: editor
3.18.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-11-10 14:03 UTC by Philip Withnall
Modified: 2016-11-03 01:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
editor-controls: show goto-line immediately (1.06 KB, patch)
2016-11-03 01:36 UTC, Christian Hergert
committed Details | Review

Description Philip Withnall 2015-11-10 14:03:05 UTC
If I mash Ctrl+I, 331 to go to line 331, this often results in ’3’ being typed on the current line in the editor, and ‘31’ making it into the go to line popover.

Would it be possible to make the go to line popover appear instantly so the key presses go to the right place, or capture key presses as soon as Ctrl+I is pressed?

Version: 3.18.1
Comment 1 Christian Hergert 2016-11-03 01:36:53 UTC
Created attachment 339003 [details] [review]
editor-controls: show goto-line immediately

We don't need to wait for the animation when showing the goto-line
popover. Just make it show up immediately. GtkMenuButton can deal with
us calling show on the popover immediately.
Comment 2 Christian Hergert 2016-11-03 01:37:30 UTC
Attachment 339003 [details] pushed as 3b79ce7 - editor-controls: show goto-line immediately