editor-controls: show goto-line immediately

We don't need to wait for the animation when showing the goto-line
popover. Just make it show up immediately. GtkMenuButton can deal with
us calling show on the popover immediately.

https://bugzilla.gnome.org/show_bug.cgi?id=757885